--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-#body{
+body{
     background-color: skyblue;
-}
+    cursor:none;
+}   
 #plane{
     position:absolute;  
     width:100px;
@@ -8,6 +9,7 @@
     text-align: inherit;
     background-color: black;
     color:red;
+    cursor:none;
 }
 #grass{
     position:absolute;
@@ -16,4 +18,5 @@
     height:10vh;
     width:100vw;
     background-color: green;
+    cursor:none;
 }
