--- a/style.css
+++ b/style.css
@@ -20,3 +20,14 @@ body{
     background-color: green;
     cursor:none;
 }
+#start{
+    position:absolute;
+    top:50vh;
+    left:45vw;
+}
+#title{
+    position:absolute;
+    left:43vw;
+    top:0vh;
+    font-size:30px;             
+}
