--- a/style.css
+++ b/style.css
@@ -37,10 +37,10 @@ body{
 #start{
     position:absolute;
     top:50vh;
-    left:45vw;
+    left:50vw;
 }
 .pipes{
     position:absolute;
     background-color:red;
-    width:25px;
+    width:5ex;
 }
