--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
 }
 #gameover{
     position:absolute;
-    left:43vw;
-    top:45vh;
+    width: 100vw;
+    text-align: center;
     font-size: 30px;
     color:red;
 }
@@ -29,15 +29,15 @@ body{
     cursor:none;
 }
 #title{
-    position:absolute;
-    left:43vw;
+    width:100vw;
+    text-align: center;
     top:0vh;
     font-size:30px;             
 }
 #start{
     position:absolute;
     top:50vh;
-    left:50vw;
+    left:47.5vw;
 }
 .pipes{
     position:absolute;
