--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 body{
     background-color: skyblue;
     width:100vw;
@@ -35,6 +36,7 @@ body{
     font-size:30px;             
 }
 #start{
+    font-family: 'Montserrat',fantasy;
     position:absolute;
     top:50vh;
     left:47.5vw;
