--- a/style.css
+++ b/style.css
@@ -56,8 +56,24 @@ body{
 #Rules{
     position: absolute;
     top:0px;
-    width: 93vw;
+    width: 89.5vw;
     text-align: right;
     font-size:30px; 
+    font-family: sans-serif;
+}
+.rule{
+    position: relative;
+    top:0px;
+    width: 97vw;
+    text-align: right;
+    font-size:20px; 
+    font-family: sans-serif;
+}
+#rule4{
+    position: relative;
+    top:0px;
+    width: 93vw;
+    text-align: right;
+    font-size:20px; 
     font-family: sans-serif;
 }
