Made the button not look like eye cancer

--- a/style.css
+++ b/style.css
@@ -36,11 +36,12 @@ body{
     font-size:30px;             
 }
 #start{
-    font-family: 'Montserrat',fantasy;
+    cursor: pointer;
     position:absolute;
     top:50vh;
     left:47.5vw;
     border:none;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .pipes{
     position:absolute;
