--- a/style.css
+++ b/style.css
@@ -2,12 +2,16 @@
 body{
     width:100vw;
     height:100vh;
+    padding:0px;
+    border:0px;
+    margin: 0px;
 }
 img{
+    padding: 0px;
     position: absolute;
     left: 0px;
-    width:100vw;
-    height:100vh;
+    width:100%;
+    height:100%;
 }
 #gameover{
     position:absolute;
