--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+@media (orientation:portrait){
+    img , div , ul , button{
+        display: none;
+    }
+    #Error{
+        display: block;
+        width: 50vw;
+        margin: 0 auto;
+        text-align: center;
+    }
+    body{
+        display: flex;
+        align-items: center;
+    }
+}
+#Error{
+    display: none;
+}
 body{
     width:100vw;
     height:100vh;
