--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
         display: none;
     }
     #Error{
-        display: block;
+        display: block !important;
         width: 50vw;
         margin: 0 auto;
         text-align: center;
